# youme-transformer-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  clean.sh  compile.sh  docker-compile.sh  flash-firmware.sh
include/: midi-parser.h  midi-port.h  tusb_config.h  uart-midi-port.h  usb-midi-device-port.h  usb-midi-host-port.h
src/: midi-parser.c  passthrough.cpp  usb_descriptors.c
